--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>This is a test to push to repo once more.</p>
+<div class="background"></div>
+<div class="bluestripe"></div>
+<div class="greenstripe"></div>
+<div class="main"><!-- --></div>
 </body>
 </html>
