Testing div heights

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ $(document).ready(function()
 
 </head>
 <body>
-<div class="background"></div>
-<div class="bluestripe"></div>
-<div class="greenstripe"></div>
+<div class="background" style="height:100px;"> Test 1</div>
+<div class="bluestripe" style="height:100px;">Test 2</div>
+<div class="greenstripe" style="height:100px;">Test 3</div>
 <div class="main"><!-- --></div>
 </body>
 </html>
