--- a/index.html
+++ b/index.html
@@ -1,68 +1,140 @@
-<!DOCTYPE html>
 <html>
 <head>
 <title>Olivier Chan's Personal Website</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <style>
-.background{
-    position:fixed;
-    background-color:#ffffff; 
-    height:100%; 
-    width:100%; 
-    top:0; 
-    left:0;
+/* ============================================================
+  PRIMARY STRUCTURE
+============================================================ */
+.container {
+  max-width: 960px;
+  margin: 0 auto;
 }
-.bluestripe{
-    position:fixed;
-    background-color:#00c8ff;
-    width:250px; 
-    height:187px; 
-    left:50%; 
-    margin-left:-600px;
-    margin-top:400px;
+
+/* ============================================================
+  SECTIONS
+============================================================ */
+section.module:last-child {
+  margin-bottom: 0;
 }
-.greenstripe{
-    position:fixed;
-    background-color=#00c858;
-    width:300px;
-    height:246px;
-    left:50%;
-    margin-left:400px;
-    margin-top:500px;
+section.module h2 {
+  margin-bottom: 40px;
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
 }
-.main{
-    position:fixed;
-    background-color:#ffffff; 
-    height:100%; 
-    width:100%; 
-    top:0; 
-    left:0;
+section.module p {
+  margin-bottom: 40px;
+  font-size: 16px;
+  font-weight: 300;
+}
+section.module p:last-child {
+  margin-bottom: 0;
+}
+section.module.content {
+  padding: 40px 0;
+}
+section.module.parallax {
+  padding: 240px 0;
+  background-position: 0 0;
+}
+section.module.parallax h1 {
+  color: #1e1e1e;
+  font-size: 48px;
+  line-height: 1;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 0 0 10px white;
+}
+section.module.parallax-1 {
+  background-image: url("../img/demo/pattern1.png");
+}
+section.module.parallax-2 {
+  background-image: url("../img/demo/pattern2.png");
+}
+section.module.parallax-3 {
+  background-image: url("../img/demo/pattern3.png");
+}
+
+@media all and (min-width: 600px) {
+  section.module h2 {
+    font-size: 42px;
+  }
+  section.module p {
+    font-size: 20px;
+  }
+  section.module.parallax {
+    padding: 300px 0;
+  }
+  section.module.parallax h1 {
+    font-size: 96px;
+  }
+}
+@media all and (min-width: 960px) {
+  section.module.parallax h1 {
+    font-size: 160px;
+  }
 }
 </style>
 <script>
-$(document).ready(function()
-{
-    $(window).bind('scroll',function(e)
-    {
-        parallaxScroll();
+(function(){
+
+  var parallax = document.querySelectorAll(".parallax"),
+      speed = 0.5;
+
+  window.onscroll = function(){
+    [].slice.call(parallax).forEach(function(el,i){
+
+      var windowYOffset = window.pageYOffset,
+          elBackgrounPos = "50% " + (windowYOffset * speed) + "px";
+      
+      el.style.backgroundPosition = elBackgrounPos;
+
     });
- 
-    function parallaxScroll()
-    {
-        var scrolledY = $(window).scrollTop();
-        $('.background').css('background-position','center -'+((scrolledY*0.2))+'px');
-        $('.bluestripe').css('top','-'+((scrolledY*0.5))+'px');
-        $('.greenstripe').css('top','-'+((scrolledY*0.8))+'px');
-    }
- 
-});
+  };
+
+})();
 </script>
 
 </head>
 <body>
-<div class="background" style="height:100px;"> Test 1</div>
-<div class="bluestripe" style="height:100px;">Test 2</div>
-<div class="greenstripe" style="height:100px;">Test 3</div>
-<div class="main"><!-- --></div>
+<section class="module parallax parallax-1">
+  <div class="container">
+    <h1>Motion</h1>
+  </div>
+</section>
+
+<section class="module content">
+  <div class="container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor...</p>
+  </div>
+</section>
+
+<section class="module parallax parallax-2">
+  <div class="container">
+    <h1>Shape</h1>
+  </div>
+</section>
+
+<section class="module content">
+  <div class="container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor...</p>
+  </div>
+</section>
+
+<section class="module parallax parallax-3">
+  <div class="container">
+    <h1>Colour</h1>
+  </div>
+</section>
+
+<section class="module content">
+  <div class="container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor...</p>
+  </div>
+</section>
 </body>
 </html>
