--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <title>Olivier Chan's Personal Website</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="./css/parallax.css">
-<script type="text/javascript" src="./js/parallax.js></script>
-
+<script type="text/javascript" src="./js/parallax.js"></script>
 </head>
 <body>
 <section class="module parallax parallax-1">
