--- a/index.html
+++ b/index.html
@@ -2,47 +2,102 @@
 <head>
 <title>Olivier Chan's Personal Website</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="./css/parallax.css">
-<script type="text/javascript" src="./js/parallax.js"></script>
+<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-<section class="module parallax parallax-1">
-  <div class="container">
-    <h1>Motion</h1>
-  </div>
-</section>
 
-<section class="module content">
-  <div class="container">
-    <h2>Lorem Ipsum Dolor</h2>
-    <p>Lorem ipsum dolor...</p>
-  </div>
-</section>
+<h1>Don't Overthink It Grids <em>(while we wait for flexbox!)</em></h1>
 
-<section class="module parallax parallax-2">
-  <div class="container">
-    <h1>Shape</h1>
-  </div>
-</section>
+<div class="grid">
+   <div class="col-2-3">
+     <div class="module">
+       <h3>2/3</h3>
+				<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+     </div>
+   </div>
+   <div class="col-1-3">
+     <div class="module">
+     		<h3>1/3</h3>
+				<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies</p>	
+     </div>
+   </div>
+</div>
 
-<section class="module content">
-  <div class="container">
-    <h2>Lorem Ipsum Dolor</h2>
-    <p>Lorem ipsum dolor...</p>
-  </div>
-</section>
+<div class="grid grid-pad">
+   <div class="col-2-3">
+     <div class="module">
+     		<h3>2/3 (Opt-in Outside Padding)</h3>
+				<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>	
+     </div>
+   </div>
+   <div class="col-1-3">
+     <div class="module">
+     		<h3>1/3</h3>
+				<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam.</p>	
+     </div>
+   </div>
+</div>
 
-<section class="module parallax parallax-3">
-  <div class="container">
-    <h1>Colour</h1>
-  </div>
-</section>
+<div class="grid grid-pad">
+   <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+   <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+  <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+  <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+  <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+  <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+  <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+  <div class="col-1-8">
+     <div class="module">
+     		<h3>1/8</h3>
+     </div>
+   </div>
+</div>
 
-<section class="module content">
-  <div class="container">
-    <h2>Lorem Ipsum Dolor</h2>
-    <p>Lorem ipsum dolor...</p>
-  </div>
-</section>
+<div class="grid grid-pad">
+   <div class="col-1-4">
+     <div class="module">
+     		<h3>1/4</h3>
+     </div>
+   </div>
+   <div class="col-1-2">
+     <div class="module">
+     		<h3>1/2</h3>
+     </div>
+   </div>
+  <div class="col-1-4">
+     <div class="module">
+     		<h3>1/4</h3>
+     </div>
+   </div>
+</div>
+
 </body>
 </html>
