--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 		<title></title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="./css/grid.css" />
+    <link rel="stylesheet" type="text/css" href="./css/waves.min.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="./js/waves.min.js"></script>
 	</head>
 
 	<body>
@@ -101,6 +104,21 @@
         <div class="table">
             <div class="table-cell">
                 And again
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="square bg img3">
+    <div class="content2">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    Test
+                </div>
             </div>
         </div>
     </div>
