Shadows and overlay colors

--- a/index.html
+++ b/index.html
@@ -13,104 +13,8 @@
 	<body>
 <!-- 1st row vertically centered text in the square columns -->
 <div class="grid-container">
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <ul>This demo shows you can center multiple types of content :
-                    <li>Text</li>
-                    <li>Images</li>
-                    <li>Lists</li>
-                    <li>... (you can also do it with forms)</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell numbers">
-                    98%
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell numbers">               
-                3.9/5
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- 2nd row verticaly centered images in square columns -->
-
-<div class="square">
-   <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <img class="rs" src=""/>
-                Responsive image.
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-               <img class="rs" src=""/>
-                Responsive image.
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square">
-   <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                <img class="rs" src="./img/test.png"/>
-                Responsive image.
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- 3rd row responsive images in background with centered content -->
-
-<div class="square bg img1">
-   <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                Centered responsive images as background with centered content over it.
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square bg img2">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                Again
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square bg img3">
-    <div class="content">
-        <div class="table">
-            <div class="table-cell">
-                And again
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="square bg img3">
-    <div class="content2">
+<div class="square shadow bg img1">
+    <div class="content2 darken darken-b">
         <div class="box waves-effect waves-light waves-block">
         <script type="text/javascript">
             Waves.displayEffect();
@@ -118,6 +22,122 @@
             <div class="table">
                 <div class="table-cell">
                     Test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square shadow bg img2">
+    <div class="content2 darken darken-r">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    Test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square shadow bg img3">
+    <div class="content2 darken darken-y">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    This is a test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 2nd row verticaly centered images in square columns -->
+<div class="square shadow bg img1">
+    <div class="content2 darken">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    Test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square shadow bg img2">
+    <div class="content2 darken">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    Test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square shadow bg img3">
+    <div class="content2 darken">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    This is a test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 3rd row responsive images in background with centered content -->
+<div class="square shadow bg img1">
+    <div class="content2 darken">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    Test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square shadow bg img2">
+    <div class="content2 darken">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    Test
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="square bg img3">
+    <div class="content2 darken">
+        <div class="box waves-effect waves-light waves-block">
+        <script type="text/javascript">
+            Waves.displayEffect();
+        </script>
+            <div class="table">
+                <div class="table-cell">
+                    This is a test
                 </div>
             </div>
         </div>
