Albums and Videos sections

--- a/index.html
+++ b/index.html
@@ -1,150 +1,94 @@
 <!DOCTYPE HTML>
 <html>
 
-	<head>
-		<title></title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" type="text/css" href="./css/grid.css" />
-    <link rel="stylesheet" type="text/css" href="./css/waves.min.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="./js/waves.min.js"></script>
-	</head>
+<head>
+  <title>Olivier Chan-Duhon | Engineering & Photography</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="./css/grid.css" />
+  <link rel="stylesheet" type="text/css" href="./css/waves.min.css" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="./js/waves.min.js"></script>
+</head>
 
-	<body>
-<!-- 1st row vertically centered text in the square columns -->
-<div class="grid-container">
-<div class="square shadow bg img1">
-    <div class="content2 darken darken-b">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    Test
+<body>
+    <!-- 1st row vertically centered text in the square columns -->
+    <section id="intro">
+        <div id="floating-intro">
+            Olivier Chan-Duhon<br>
+            Engineer & Photographer from Montreal
+        </div>
+    </section>
+    <section id="description">
+        Hi, my name is Olivier.<br>
+        I am a Montreal based engineer who enjoys photography, outdoor sports, motorsports, programming and tinkering with electronics.<br>
+        You will find a selection of my favorite photos and videos taken throughout the years stored here on my digital home. Enjoy!
+    </section>
+    <section id="albums-intro">
+        Albums
+    </section>
+    <section id="albums">
+        <!-- Start of Grid -->
+        <div class="grid-container">
+            <!-- Row 1 -->
+            <div id="paddingbox">
+                <div class="square shadow bg img1">
+                    <div class="content2 darken darken-b">
+                        <div class="box waves-effect waves-light waves-block">
+                            <script type="text/javascript">
+                            Waves.displayEffect();
+                            </script>
+                            <div class="table">
+                                <div class="table-cell">
+                                    TEST
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="paddingbox">
+                <div class="square shadow bg img2">
+                    <div class="content2 darken darken-r">
+                        <div class="box waves-effect waves-light waves-block">
+                            <script type="text/javascript">
+                            Waves.displayEffect();
+                            </script>
+                            <div class="table">
+                                <div class="table-cell">
+                                    TEST
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="paddingbox">
+                <div class="square shadow bg img3">
+                    <div class="content2 darken darken-y">
+                        <div class="box waves-effect waves-light waves-block">
+                            <script type="text/javascript">
+                            Waves.displayEffect();
+                            </script>
+                            <div class="table">
+                                <div class="table-cell">
+                                    This is a test
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<div class="square shadow bg img2">
-    <div class="content2 darken darken-r">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    Test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square shadow bg img3">
-    <div class="content2 darken darken-y">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    This is a test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- 2nd row verticaly centered images in square columns -->
-<div class="square shadow bg img1">
-    <div class="content2 darken">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    Test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square shadow bg img2">
-    <div class="content2 darken">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    Test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square shadow bg img3">
-    <div class="content2 darken">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    This is a test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- 3rd row responsive images in background with centered content -->
-<div class="square shadow bg img1">
-    <div class="content2 darken">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    Test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square shadow bg img2">
-    <div class="content2 darken">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    Test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="square bg img3">
-    <div class="content2 darken">
-        <div class="box waves-effect waves-light waves-block">
-        <script type="text/javascript">
-            Waves.displayEffect();
-        </script>
-            <div class="table">
-                <div class="table-cell">
-                    This is a test
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- END OF LAYOUT -->
-</div>
-	</body>
+    </section>
+    <!-- End of grid -->
+    <section id="videos-intro">
+        Videos
+    </section>
+    <section id="videos">
+    </section>
+    <section id="links">
+            LinkedIn Email
+    </section>
+</body>
 
 </html>
