--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
   <link rel="stylesheet" type="text/css" href="./css/waves.min.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="./js/waves.min.js"></script>
+  <!--<script src-"./js/main.js"></script>
+  <script src="./js/skrollr.min.js"></script>-->
 </head>
 
 <body>
     <!-- 1st row vertically centered text in the square columns -->
     <section id="intro">
-        <div id="floating-intro">
-            Olivier Chan-Duhon<br>
-            Engineer & Photographer from Montreal
+        <div id="floating-intro" data-center="opacity: 1"
+                data-106-top="opacity: 0"
+                data-anchor-target="#intro h2">
+            <h2>Olivier Chan-Duhon</h2>
+            <ul>Engineer & Photographer from Montreal</ul>
         </div>
     </section>
     <section id="description">
-        Hi, my name is Olivier.<br>
+        <h1>Hi, my name is Olivier.</h1><br>
         I am a Montreal based engineer who enjoys photography, outdoor sports, motorsports, programming and tinkering with electronics.<br>
         You will find a selection of my favorite photos and videos taken throughout the years stored here on my digital home. Enjoy!
     </section>
@@ -30,10 +34,10 @@
         <!-- Start of Grid -->
         <div class="grid-container">
             <!-- Row 1 -->
-            <div id="paddingbox">
+            <div id="square-padding">
                 <div class="square shadow bg img1">
-                    <div class="content2 darken darken-b">
-                        <div class="box waves-effect waves-light waves-block">
+                    <div class="darken-container darken darken-b">
+                        <div class="waves-container waves-effect waves-light waves-block">
                             <script type="text/javascript">
                             Waves.displayEffect();
                             </script>
@@ -46,10 +50,10 @@
                     </div>
                 </div>
             </div>
-            <div id="paddingbox">
+            <div id="square-padding">
                 <div class="square shadow bg img2">
-                    <div class="content2 darken darken-r">
-                        <div class="box waves-effect waves-light waves-block">
+                    <div class="darken-container darken darken-r">
+                        <div class="waves-container waves-effect waves-light waves-block">
                             <script type="text/javascript">
                             Waves.displayEffect();
                             </script>
@@ -62,10 +66,10 @@
                     </div>
                 </div>
             </div>
-            <div id="paddingbox">
+            <div id="square-padding">
                 <div class="square shadow bg img3">
-                    <div class="content2 darken darken-y">
-                        <div class="box waves-effect waves-light waves-block">
+                    <div class="darken-container darken darken-y">
+                        <div class="waves-container waves-effect waves-light waves-block">
                             <script type="text/javascript">
                             Waves.displayEffect();
                             </script>
@@ -85,6 +89,58 @@
         Videos
     </section>
     <section id="videos">
+            <!-- Start of Grid -->
+        <div class="grid-container">
+            <!-- Row 1 -->
+            <div id="square-padding">
+                <div class="square shadow bg img1">
+                    <div class="darken-container darken darken-b">
+                        <div class="waves-container waves-effect waves-light waves-block">
+                            <script type="text/javascript">
+                            Waves.displayEffect();
+                            </script>
+                            <div class="table">
+                                <div class="table-cell">
+                                    TEST
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="square-padding">
+                <div class="square shadow bg img2">
+                    <div class="darken-container darken darken-r">
+                        <div class="waves-container waves-effect waves-light waves-block">
+                            <script type="text/javascript">
+                            Waves.displayEffect();
+                            </script>
+                            <div class="table">
+                                <div class="table-cell">
+                                    TEST
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="square-padding">
+                <div class="square shadow bg img3">
+                    <div class="darken-container darken darken-y">
+                        <div class="waves-container waves-effect waves-light waves-block">
+                            <script type="text/javascript">
+                            Waves.displayEffect();
+                            </script>
+                            <div class="table">
+                                <div class="table-cell">
+                                    This is a test
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="links">
             LinkedIn Email
