--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
 <body>
     <!-- 1st row vertically centered text in the square columns -->
     <section id="intro">
-        <div id="floating-intro" data-center="opacity: 1"
+    <div id="slide1" class="slide">
+        <div id="floating-intro" class="slide" data-center="opacity: 1"
                 data-106-top="opacity: 0"
                 data-anchor-target="#intro h2">
             <h2>Olivier Chan-Duhon</h2>
             <ul>Engineer & Photographer from Montreal</ul>
         </div>
+    </div>
     </section>
     <section id="description">
         <h1>Hi, my name is Olivier.</h1><br>
         I am a Montreal based engineer who enjoys photography, outdoor sports, motorsports, programming and tinkering with electronics.<br>
-        You will find a selection of my favorite photos and videos taken throughout the years stored here on my digital home. Enjoy!
+        You will find a selection of my favorite photos and videos taken throughout the years stored here on my digital home, enjoy.
     </section>
     <section id="albums-intro">
         Albums
