Add about and travel pages

--- a/travel.html
+++ b/travel.html
@@ -84,7 +84,7 @@
 		<img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200">
 		<nav>
 			<ul>
-				<li><a href="about.html">About</a></li>
+				<li><a href="#">About</a></li>
 				<li><a href="#">Recipes</a></li>
 				<li><a href="#">Travel</a></li>
 			</ul>
