Fix scrollbar overflow

--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Jyumami</title>
 	<style>
+		html {
+			overflow-y: scroll;
+		}
+		
 		header {
 			display: flex;
 			align-items: center;
@@ -56,7 +60,7 @@
 		}
 
 		.container {
-			margin: 40px;
+			margin: 0 -10px;
 		}
 
 		.about {
@@ -65,12 +69,12 @@
 			margin: 0 auto;
 		}
 		.description {
-			width: 1024px;
+			width: 800px;
 			/* Center horizontally*/
 			margin: 0 auto;
 		}
 		.favoritefoods {
-			width: 1024px;
+			width: 1000px;
 			/* Center horizontally*/
 			margin: 0 auto;
 		}
@@ -79,8 +83,8 @@
 </head>
 <body>
 	<header>
-		<img src="https://jyumami.files.wordpress.com/2023/11/img_0032-2.png" alt="Your Image" width="120">
-		<img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200">
+		<a href="index.html"><img src="https://jyumami.files.wordpress.com/2023/11/img_0032-2.png" alt="Your Image" width="120"></a>
+		<a href="index.html"><img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200"></a>
 		<nav>
 			<ul>
 				<li><a href="#">About</a></li>
