--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Jyumami</title>
 	<style>
+		html {
+			overflow-y: scroll;
+		}
+	
 		header {
 			display: flex;
 			align-items: center;
@@ -80,8 +84,8 @@
 </head>
 <body>
 	<header>
-		<img src="https://jyumami.files.wordpress.com/2023/11/img_0032-2.png" alt="Your Image" width="120">
-		<img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200">
+		<a href="index.html"><img src="https://jyumami.files.wordpress.com/2023/11/img_0032-2.png" alt="Your Image" width="120"></a>
+		<a href="index.html"><img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200"></a>
 		<nav>
 			<ul>
 				<li><a href="about.html">About</a></li>
