--- a/travel.html
+++ b/travel.html
@@ -55,29 +55,33 @@
 			font-family: 'Montserrat', sans-serif;
 		}
 
-		.row {
-			display: flex;
-			flex-wrap: wrap;
-			margin: 0 -10px;
+		.travel {
+			width: 400px;
+			/* Center horizontally*/
+			margin: 0 auto;
 		}
 
-		.column {
-			flex: 20%;
-			padding: 10px;
+		.image-container {
+			position: relative;
+			margin-left: 40px;
 		}
-
-		.column img {
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			max-width: 100%;
-			height: auto;
+		
+		.image-container img {
+			position: absolute;
+			top: 0;
+			left: 0;
 		}
-
-		.caption {
-			text-align: center;
-			margin-top: 10px;
-			font-weight: bold;
+		
+		.image-container img:nth-child(2) {
+			top: 200px;
+			left: 200px;
+			z-index: 1;
+		}
+		
+		.image-container img:nth-child(3) {
+			top: 400px;
+			left: 400px;
+			z-index: 2;
 		}
 	</style>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -88,30 +92,18 @@
 		<a href="index.html"><img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200"></a>
 		<nav>
 			<ul>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Recipes</a></li>
-				<li><a href="#">Travel</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="recipes.html">Recipes</a></li>
+				<li><a href="travel.html">Travel</a></li>
 			</ul>
 		</nav>
 	</header>
-	<div class="row" style="padding: 40px;">
-		<div class="column">
-			<img src="https://jyumami.files.wordpress.com/2023/11/pexels-eva-bronzini-6569193-edit.jpg" alt="Your Image">
-			<div class="caption">Warabimochi with kinako (蕨餅)</div>
-		</div>
-		<div class="column">
-			<img src="https://jyumami.files.wordpress.com/2023/11/pexels-karolina-grabowska-4203100-edit.jpg" alt="Your Image">
-			<div class="caption">Hojicha latte (保持茶 ぁって)</div>
-		</div>
-		<div class="column">
-			<img src="https://jyumami.files.wordpress.com/2023/11/pexels-alesia-kozik-7796749-edit.jpg" alt="Your Image">
-			<div class="caption">Matcha red bean latte (抹茶ラテ)</div>
-		</div>
-		<div class="column">
-			<img src="https://jyumami.files.wordpress.com/2023/11/pexels-pnw-production-8250990-edit.jpg" alt="Your Image">
-			<div class="caption">Roasted pork belly (燒肉)</div>
-		</div>
-		<!-- Add more columns here -->
+	<div class="travel">
+		<img src="https://jyumami.files.wordpress.com/2023/12/tokyo-orange-1.png?w=1024">
 	</div>
-</body>
+	<div class="image-container">
+		<img src="https://jyumami.files.wordpress.com/2023/11/pexels-eva-bronzini-6569193-edit.jpg" alt="Image 1" width="300px">
+		<img src="https://jyumami.files.wordpress.com/2023/11/pexels-karolina-grabowska-4203100-edit.jpg" alt="Image 2" width="300px">
+		<img src="https://jyumami.files.wordpress.com/2023/11/pexels-alesia-kozik-7796749-edit.jpg" alt="Image 3" width="300px">
+	</div>
 </html>
