--- a/about.html
+++ b/about.html
@@ -87,9 +87,9 @@
 		<a href="index.html"><img src="https://jyumami.files.wordpress.com/2023/11/img_0032-text-3.png" alt="Title" width="200"></a>
 		<nav>
 			<ul>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Recipes</a></li>
-				<li><a href="#">Travel</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="recipes.html">Recipes</a></li>
+				<li><a href="travel.html">Travel</a></li>
 			</ul>
 		</nav>
 	</header>
